--- a/sections/vuba-training-course.liquid
+++ b/sections/vuba-training-course.liquid
@@ -7,7 +7,8 @@
   {% for block in section.blocks %}
     <div
       class="training-cources-{{ block.settings.course_id }} py-36 3xl:py-40 relative w-full min-h-screen bg-fixed bg-center bg-cover before:content-[''] before:w-full before:h-full before:top-0 before:left-0 before:absolute before:bg-black before:opacity-50"
-      style="background-image: url('{{ block.settings.background_image | img_url: '1200x1200' }}');"
+      style="background-image: url('{{ block.settings.background_image | img_url: 'master' }}');"
+      {{ block.shopify_attributes }}
     >
       <div class="container">
         <div class="relative">
@@ -94,16 +95,6 @@
           "default": "2 Day Training Course"
         },
         {
-          "type": "text",
-          "label": "Day One Heading",
-          "id": "heading_one"
-        },
-         {
-          "type": "text",
-          "label": "Day Two Heading",
-          "id": "heading_two"
-        },
-        {
           "type": "richtext",
           "label": "Course Description",
           "id": "course_description",
@@ -113,6 +104,28 @@
           "type": "image_picker",
           "label": "Background Image",
           "id": "background_image"
+        },
+        {
+          "type": "text",
+          "label": "Day One Heading",
+          "id": "heading_one"
+        },
+                {
+          "type": "richtext",
+          "label": "Day 1 Content",
+          "id": "day_1_content",
+          "default": "<p>Meet and greet with an introduction to Vuba Stone</p><ul><li>On-site introduction to all tools, equipment, and project preparation</li><li>Introduction to the installation process</li><li>Theory Presentation</li><li>Q&amp;A sessions with the Vuba team and experienced Vuba Stone installers</li></ul>"
+        },
+        {
+          "type": "text",
+          "label": "Day Two Heading",
+          "id": "heading_two"
+        },
+                {
+          "type": "richtext",
+          "label": "Day 2 Content",
+          "id": "day_2_content",
+          "default": "<p>Completing a Vuba Stone project up to 1000 square feet<p>"
         },
         {
           "type": "text",
@@ -131,18 +144,7 @@
           "id": "registration_button_text",
           "default": "BECOME A REGISTERED INSTALLER"
         },
-        {
-          "type": "richtext",
-          "label": "Day 1 Content",
-          "id": "day_1_content",
-          "default": "<p>Meet and greet with an introduction to Vuba Stone</p><ul><li>On-site introduction to all tools, equipment, and project preparation</li><li>Introduction to the installation process</li><li>Theory Presentation</li><li>Q&amp;A sessions with the Vuba team and experienced Vuba Stone installers</li></ul>"
-        },
-        {
-          "type": "richtext",
-          "label": "Day 2 Content",
-          "id": "day_2_content",
-          "default": "<p>Completing a Vuba Stone project up to 1000 square feet<p>"
-        }
+
       ]
     }
   ],
