--- a/sections/vuba-intro-multirow.liquid
+++ b/sections/vuba-intro-multirow.liquid
@@ -8,7 +8,7 @@
               <h3 class="text-secondary text-[36px] xl:text-3xl 3xl:text-[53px] font-medium font-poppins leading-[40px] 3xl:leading-normal mb-[20px] lg:mb-7 ">
                 {{ section.settings.heading_1 }}</h3>
               <div class="text-[16px] 2xl:text-[23px] font-poppins ">
-                <p>{{ section.settings.description_1 }}</p>
+               {{ section.settings.description_1 }}
               </div>
             </div>
           </div>
@@ -25,7 +25,7 @@
               <h3 class="text-secondary text-[36px] xl:text-3xl 3xl:text-[53px] font-medium font-poppins leading-[40px] 3xl:leading-normal mb-[20px] lg:mb-7 ">
                 {{ section.settings.heading_2 }}</h3>
               <div class="text-[16px] 2xl:text-[23px] font-poppins ">
-                <p>{{ section.settings.description_2 }}</p>
+                {{ section.settings.description_2 }}
               </div>
             </div>
           </div>
@@ -54,7 +54,7 @@
       "type": "textarea",
       "id": "description_1",
       "label": "Description 1",
-      "default": "With a monolithic bond guaranteeing long-lasting performance, VubaMac surpasses conventional materials like concrete and asphalt in longevity and flexibility..."
+      "default": "<p>With a monolithic bond guaranteeing long-lasting performance, VubaMac surpasses conventional materials like concrete and asphalt in longevity and flexibility</p>"
     },
     {
       "type": "url",
@@ -69,10 +69,10 @@
       "default": "What is VubaMac?"
     },
     {
-      "type": "textarea",
+      "type": "richtext",
       "id": "description_2",
       "label": "Description 2",
-      "default": "With a monolithic bond guaranteeing long-lasting performance, VubaMac surpasses conventional materials like concrete and asphalt in longevity and flexibility..."
+      "default": "<p>With a monolithic bond guaranteeing long-lasting performance, VubaMac surpasses conventional materials like concrete and asphalt in longevity and flexibility</p>"
     },
     {
       "type": "image_picker",
